updating some message

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="project">
                 <!--work experience-->
                 <a href="" class="project"></a>
-                <p><a href="https://github.com/jacobt98/maze-seeker" class="project">maze-seeke</a>&emsp;&emsp;&emsp;&emsp;&emsp;Aug. 2020 to Dec.</p>
+                <p><a href="https://github.com/jacobt98/maze-seeker" class="project">maze-seeke (Machine learning and Neural Network ) </a>&emsp;&emsp;&emsp;&emsp;&emsp;Aug. 2020 to Dec.</p>
                 <p>In this program, we created a maze and represent it through a string in Python, and then place two autonomous agents, a hiding agent '1' and a seeking agent '0', into the maze by replacing a blank space for which they make up.
                 </p>
             </div>
