--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <ul class="social-list">
                 <li><a href="mailto:sunhuawei1993@gmail.com" class="footer__link"><i class="fas fa-envelope"> - sunhuawei1993@gmail.com</i></a></li>
                 <li class='social-list__item'><a class="social-list__link" href="https://www.linkedin.com/in/hua-wei-sun-409247b2" ><i class="fab fa-linkedin"> - Linkedin</i></a></li>
-                <li class='social-list__item'><a class="social-list__link" href="tell:1-210-718-7839" ><i class="fas fa-phone"> 1-210-718-7839</i></a></li>
+                <li class='social-list__item'><a class="social-list__link" href="tel:1-210-718-7839" ><i class="fas fa-phone"> 1-210-718-7839</i></a></li>
                 <li class='social-list__item'><a class="social-list__link" href="https://github.com/SteveSyun"><i class="fab fa-github"> - GitHub</i></a></li>
                 
   
