project + s = projects fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!---Cover-Letter-->
     <!----My Skills--->
         <section class = "my-skills" id="skills">
-            <h2 class="section__title section__title--skills">What I can do?</h2>
+            <h2 class="section__title section__title--skills">What I can do</h2>
             <div class="skills">
                 <div class="skill">
                     <h3>Programming Language</h3>
@@ -94,7 +94,7 @@
         
     <!--About me -->
         <section class="about-me" id ="about">
-                <h2 class="section--title section__title--about">Who I am?</h2>
+                <h2 class="section--title section__title--about">Who I am？</h2>
                 <p class="section__subtitle section__subtitle--about">Developer/Data Sciencist</p>
                 <!----type about me for this paragraph-->
                 <div class="about-me__body">
@@ -141,7 +141,7 @@
         
     <!-- my project --> 
         <section class="my-projects" id="projects">
-            <h2 class="section__title section__title--project">My Project</h2>
+            <h2 class="section__title section__title--project">My Projects</h2>
             <div class="project">
                 <!--project-->
                 <p><a href="https://stevesyun.github.io/portfolio/" class="project">Self Portfolio Web</a> (self-hosting)&emsp;&emsp;&emsp;&emsp;&emsp; Aug. 2021 to Current</p>
