--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -42,7 +42,7 @@
         </section>
         <!-- individual porfilio-item -->
         <div class="portfolio-item-individual">
-            <p></p>
+            <iframe src="img/Resume.forWeb.pdf" height="800px" width="100%"></iframe>
             <p></p>
             <p></p>
             <img src="" alt="">
